2000-06-17 19:37 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * source/common/hbstr.c
   * source/rtl/strings.c
   * source/rtl/dir.c
   * source/rtl/transfrm.c
     ! Fixed unary increment/decrement operator usage in toupper()/tolower()
       functions, since these may be macros on some systems.

   * source/rtl/right.c
     % Some optimization.

2000-06-17 18:58 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * source/compiler/harbour.y
     + One TODO readded

   * source/rtl/scroll.c
   * source/rtl/saverest.c
   * source/rtl/mouseapi.c
     % Some optimizations.

   * source/rtl/setcolor.c
     * Minor code standardization.

2000-05-07 23:30 CET Patrick Mast <harbour@PatrickMast.com>
   * tests/testhtml.prg
     * changed the Default() function into If(...)

2000-06-16 22:10 GMT-3 Luiz Rafael Culik <culik@sl.conex.net>
   * utils/hbdoc/hbdoc.prg
     * Some small enhacements when generating the Windows HTML HELP project
   * utils/hbdoc/genhtm.prg
     utils/hbdoc/genchm.prg
     utils/hbdoc/html.pg
     * Small enhacements
     * Some fixed for Errors Reported by April White
   * utils/hbdoc/genrtf.prg
     * small changes
   * utils/hbdoc/genos2.prg
     utils/hbdoc/os2.prg
     % Many optimizations
     ! Many compile error now are fixed(most was the 255 character line lenght)
     % Better Table support, Now it generate true Tables
     * Many thanks for Maurilio Longo.With out his help this changes was not
       possible

2000-06-16 21:28 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * source/rtl/transfrm.c
     ! Fixed GCC -O2 warnings.

   * source/vm/classes.c
     ! Fixed GCC -O2 warning in __SENDER()

2000-06-16 10:55 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>
   * source/pp/ppcore.c
     ! Removed 1 // comment.

2000-06-16 18:45 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * source/vm/classes.c
     ! Formatting, warnings fixed.
     * hb_itemCopy( &hb_stack.return, ... ) -> hb_itemReturn( ... )

   * source/rdd/dbfntx/dbfntx1.c